--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://dimak911.github.io/team-project-1",
+  "homepage": "https://github.com/veta41/team_project_ICECREAM.git",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /team-project-1/"
+    "build": "parcel build src/*.html --public-url /team_project_ICECREAM/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "git+https://github.com/veta41/team_project_ICECREAM.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Svitlana Chudesa <chsveta34@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/veta41/team_project_ICECREAM.git/issues"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
